Follow Lists now have titles

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,13 +28,13 @@
         <activity
             android:name=".follow_item.FollowItemActivity"
             android:label="@string/title_activity_follow_item"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme" />
         <activity android:name=".profile.ProfileActivity" />
         <activity android:name=".movie.MovieActivity" />
         <activity
             android:name=".movie.MovieItemActivity"
             android:label="@string/title_activity_movie_item"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
