finish user and movie search(has some problem with transfer current user) finish test part(maybe not enough?)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,8 +32,8 @@
                 "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name" />
         <activity android:name=".TabHostActivity" />
-        <activity android:name=".SearchMovieActivity" />
-        <activity android:name=".SearchUserActivity" />
+        <activity android:name=".search.SearchMovieActivity" />
+        <activity android:name=".search.SearchUserActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
