--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,18 +6,34 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launcher_3"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".TabHostActivity"></activity>
-        <activity android:name=".SearchMovieActivity"></activity>
-        <activity android:name=".SearchUserActivity"></activity>
+
+        <activity
+            android:name="com.facebook.CustomTabActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="@string/fb_login_protocol_scheme" />
+            </intent-filter>
+        </activity>
+        <activity android:name="com.facebook.FacebookActivity"
+            android:configChanges=
+                "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:label="@string/app_name" />
+        <activity android:name=".TabHostActivity" />
+        <activity android:name=".search.SearchMovieActivity" />
+        <activity android:name=".search.SearchUserActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,6 +41,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".follow_item.FollowItemActivity"
+            android:label="@string/title_activity_follow_item"
+            android:theme="@style/AppTheme" />
+        <activity android:name=".profile.ProfileActivity" />
+        <activity android:name=".movie.MovieActivity" />
+        <activity
+            android:name=".movie.MovieItemActivity"
+            android:label="@string/title_activity_movie_item"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <meta-data android:name="com.facebook.sdk.ApplicationId"
+    android:value="@string/facebook_app_id"/>
     </application>
 
 </manifest>
