--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,7 +50,7 @@
         <activity
             android:name=".movie.MovieItemActivity"
             android:label="@string/title_activity_movie_item"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme" />
         <meta-data android:name="com.facebook.sdk.ApplicationId"
     android:value="@string/facebook_app_id"/>
     </application>
